# SmwBot2

./: Cargo.toml  README.md  config.toml
src/: config.rs  main.rs
src/actions/: mod.rs  project.rs
src/commands/: mod.rs
src/commands/notion/: mod.rs
src/commands/projects/: mod.rs
src/commands/utilities/: mod.rs
src/listeners/: handler.rs
src/utils/: mod.rs
