[package]
name = "smwbot2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dotenv = "0.15.0"
humantime = "2.1.0"
itertools = "0.14.0"
notion = "0.6.0"
poise = "0.6.1"
rand = "0.8.5"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.134"
serenity = "0.12.4"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
